--- a/src/components/uiKit/PageTitle/style/mobile.scss
+++ b/src/components/uiKit/PageTitle/style/mobile.scss
@@ -8,4 +8,5 @@
     text-align: center;
     margin-bottom: 20px;
     text-shadow: 0px 1px 0px #000;
+    width: 100%;
 }
